<resources>
    <string name="app_name">Tadee</string>
    <string name="symmetrical">Symmetrical</string>
    <string name="unsymmetrical">Unsymmetrical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results">Results</string>
    <string name="type">Type</string>
    <string name="d3">D3</string>
    <string name="spacing">Spacing (m)</string>
    <string name="number_of_sub_conductors">Number Of Sub-conductors</string>
    <string name="d2">D2</string>
    <string name="d">D</string>
    <string name="num">Num</string>
    <string name="spacing_of_sub_conductors">Sub-conductor Spacing (m)</string>
    <string name="sub_d">Sub-D</string>
    <string name="number_of_strands">Number Of Strands</string>
    <string name="diameter_of_strands">Diameter Of Strands (m)</string>
    <string name="strand_d">Strand-D</string>
    <string name="next">Next</string>
    <string name="length_of_line_km">Length Of Line (Km)</string>
    <string name="model">Model</string>
    <string name="resistance_per_km">Resistance (per Km)</string>
    <string name="system_voltage">System Voltage (kV)</string>
    <string name="receiving_load_mw">Receiving load (MW)</string>
    <string name="power_factor_rec">Load Power Factor</string>
    <string name="frequency_hz">Frequency (Hz)</string>
    <string name="share">Share</string>
    <string name="_25_04_21">25/04/21</string>
    <string name="tadee_project">TADEE PROJECT</string>
    <string name="line_parameter_calculator">Line Parameter Calculator</string>
    <string name="team_members_n_n_nandini_107119041_n_ishikaa_lunawat_107119051_n_visweswaran_b_107119135">Team Members: \n\n Nandini - 107119041 \n Ishikaa Lunawat - 107119051 \n Visweswaran B. - 107119135</string>
    <string name="start">START</string>
</resources>